# voice-dictation

./: .gitignore  README.md  pyproject.toml  recall.py
src/voice_dictation/: app.py  config.py  db.py  hotkeys.py  injector.py  logger.py  media.py  overlay.py  recorder.py  transcriber.py
